[project]
name = "do-anything-mcp"
version = "0.1.0"
description = "Upload and process any filetype through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Do Anything MCP Contributors", email = "tech@filmcademy.io"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "mcp[cli]>=1.3.0"
]

[project.scripts]
do-anything-mcp = "do_anything_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://github.com/flipsai/do-anything-mcp"
repository = "https://github.com/flipsai/do-anything-mcp"
